--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bzip2=1.0.8=haf1e3a3_3
+  - bzip2=1.0.8
   - ca-certificates=2020.6.20=hecda079_0
   - cairo=1.16.0
   - certifi=2020.6.20=py38h32f6830_0
@@ -17,16 +17,14 @@ dependencies:
   - graphite2=1.3.13
   - harfbuzz=2.7.2
   - hdf5=1.10.6
-  - icu=67.1=hb1e8313_0
+  - icu=67.1
   - jasper=1.900.1
-  - jpeg=9d=h0b31af3_0
+  - jpeg=9d
   - lame=3.100
   - libblas=3.8.0=17_openblas
   - libcblas=3.8.0=17_openblas
-  - libcxx=10.0.1=h5f48129_0
+  - libcxx=10.0.1
   - libffi=3.2.1
-  - libgfortran=4.0.0
-  - libgfortran4=7.5.0
   - libiconv=1.16
   - liblapack=3.8.0=17_openblas
   - liblapacke=3.8.0=17_openblas
@@ -43,21 +41,21 @@ dependencies:
   - numpy=1.19.1
   - opencv=4.4.0
   - openh264=2.1.1
-  - openssl=1.1.1g=haf1e3a3_1
+  - openssl=1.1.1g
   - pcre=8.44
   - pip=20.2.3=py_0
-  - pixman=0.38.0=h01d97ff_1003
-  - py-opencv=4.4.0=py38h23f93f0_2
-  - python=3.8.5=hfc71d35_7_cpython
+  - pixman=0.38.0
+  - py-opencv=4.4.0
+  - python=3.8.5
   - python_abi=3.8=1_cp38
-  - readline=8.0=h0678c8f_2
-  - setuptools=49.6.0=py38h32f6830_0
+  - readline=8.0
+  - setuptools=49.6.0
   - sqlite=3.33.0
   - tk=8.6.10
-  - wheel=0.35.1=pyh9f0ad1d_0
-  - x264=1!152.20180806=h1de35cc_0
-  - xz=5.2.5=haf1e3a3_1
-  - zlib=1.2.11=h7795811_1009
+  - wheel=0.35.1
+  - x264=1!152.20180806
+  - xz=5.2.5
+  - zlib=1.2.11
   - zstd=1.4.5
   - pip:
     - attrs==20.2.0
@@ -88,4 +86,3 @@ dependencies:
     - threadpoolctl==2.1.0
     - toml==0.10.1
     - xmltodict==0.12.0
-
